--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <h1>JANKEN - Rock, Paper, Scissors</h1>
+        <div style="margin-top: 15px; text-align: right;">Check the <a target="_blank" href="https://github.com/KaiDHsu/jankenkai">Repo</a></div>
     </header>
     <section class="Login">
         <div class="loginSubmits">
