Used mustache for templating the history section

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Simple UI for JanKen">
     <meta name="author" content="David Hsu">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/mustache.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Nova+Square" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/janken.css">
     <script type="text/javascript" src="js/janken.js"></script>
